use string app name

--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: kade-staging-shared
 data:
-  NEW_RELIC_APP_NAME: KaDE Staging
+  NEW_RELIC_APP_NAME: 'KaDE Staging'
   NEW_RELIC_LOG_LEVEL: info
   NEW_RELIC_MONITOR_MODE: 'true'
   PORT: 80
