fix env var value strings

--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -6,8 +6,8 @@ data:
   NEW_RELIC_APP_NAME: 'KaDE Staging'
   NEW_RELIC_LOG_LEVEL: info
   NEW_RELIC_MONITOR_MODE: 'true'
-  PORT: 80
-  RAILS_ENV: staging
+  PORT: '80'
+  RAILS_ENV: 'staging'
   RAILS_LOG_TO_STDOUT: 'true'
   RAILS_MAX_THREADS: '2'
   REDIS_URL: 'redis://kade-staging-redis:6379/0'
