--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -149,7 +149,7 @@ spec:
   tls:
   - hosts:
     - kade-staging.zooniverse.org
-    secretName: panoptes-staging-tls-secret
+    secretName: kade-staging-tls-secret
   rules:
   - host: hamlet-staging.zooniverse.org
     http:
