don't route hamlet to kade

--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -151,7 +151,7 @@ spec:
     - kade-staging.zooniverse.org
     secretName: kade-staging-tls-secret
   rules:
-  - host: hamlet-staging.zooniverse.org
+  - host: kade-staging.zooniverse.org
     http:
       paths:
       - pathType: Prefix
