switch to owner role for db migrations
kade has multiple pg user roles setup, use the owning role to run db migrations

--- a/kubernetes/db-migrate-staging.tmpl
+++ b/kubernetes/db-migrate-staging.tmpl
@@ -18,7 +18,7 @@ spec:
         - secretRef:
             name: kade-common-env-vars
         - secretRef:
-            name: kade-staging-sidekiq-db
+              name: kade-staging-app-db
         - configMapRef:
             name: kade-staging-shared
       restartPolicy: Never
