--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -11,6 +11,7 @@ data:
   RAILS_LOG_TO_STDOUT: 'true'
   RAILS_MAX_THREADS: '2'
   REDIS_URL: 'redis://kade-staging-redis:6379/0'
+  TRAINING_PATH_PREFIX: '/mnt/batch/tasks/fsmounts/training_storage/training_images'
 ---
 apiVersion: apps/v1
 kind: Deployment
