add db creds to sidekiq pods

--- a/kubernetes/deployment-production.tmpl
+++ b/kubernetes/deployment-production.tmpl
@@ -129,6 +129,8 @@ spec:
           - secretRef:
               name: kade-production-env-vars
           - secretRef:
+              name: kade-production-app-db
+          - secretRef:
               name: kade-common-env-vars
           - configMapRef:
               name: kade-production-shared
