--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -75,7 +75,7 @@ spec:
           - name: HONEYBADGER_REVISION
             value: '__IMAGE_TAG__'
           - name: BAJOR_API_URL
-            value: ''https://bajor-staging.zooniverse.org'
+            value: 'https://bajor-staging.zooniverse.org'
           envFrom:
           - secretRef:
               name: kade-staging-env-vars
