add production and staging workflow env vars for exporters

--- a/kubernetes/deployment-production.tmpl
+++ b/kubernetes/deployment-production.tmpl
@@ -12,6 +12,7 @@ data:
   RAILS_MAX_THREADS: '5'
   REDIS_URL: 'redis://kade-production-redis:6379/0'
   TRAINING_PATH_PREFIX: '/mnt/batch/tasks/fsmounts/training/catalogues/production/images'
+  ZOOBOT_GZ_WORKFLOW_ID: '21802'
 ---
 apiVersion: apps/v1
 kind: Deployment
