--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -12,6 +12,7 @@ data:
   RAILS_MAX_THREADS: '2'
   REDIS_URL: 'redis://kade-staging-redis:6379/0'
   TRAINING_PATH_PREFIX: '/mnt/batch/tasks/fsmounts/training/catalogues/staging/images'
+  ZOOBOT_GZ_WORKFLOW_ID: '3598'
 ---
 apiVersion: apps/v1
 kind: Deployment
