specify the env vars for deployment

--- a/kubernetes/deployment-staging.tmpl
+++ b/kubernetes/deployment-staging.tmpl
@@ -13,6 +13,7 @@ data:
   REDIS_URL: 'redis://kade-staging-redis:6379/0'
   TRAINING_PATH_PREFIX: '/mnt/batch/tasks/fsmounts/training/catalogues/staging/images'
   ZOOBOT_GZ_WORKFLOW_ID: '3598'
+  PREDICTION_JOB_SUBJECT_SET_ID_DEFAULT: '5074'
 ---
 apiVersion: apps/v1
 kind: Deployment
