--- a/kubernetes/deployment-production.tmpl
+++ b/kubernetes/deployment-production.tmpl
@@ -13,6 +13,7 @@ data:
   REDIS_URL: 'redis://kade-production-redis:6379/0'
   TRAINING_PATH_PREFIX: '/mnt/batch/tasks/fsmounts/training/catalogues/production/images'
   ZOOBOT_GZ_WORKFLOW_ID: '21802'
+  PREDICTION_JOB_SUBJECT_SET_ID_DEFAULT: '110267'
 ---
 apiVersion: apps/v1
 kind: Deployment
