fix old ENV vars

--- a/kubernetes/deployment-production.tmpl
+++ b/kubernetes/deployment-production.tmpl
@@ -12,8 +12,7 @@ data:
   RAILS_MAX_THREADS: '5'
   REDIS_URL: 'redis://kade-production-redis:6379/0'
   TRAINING_PATH_PREFIX: '/mnt/batch/tasks/fsmounts/training/catalogues/production/images'
-  ZOOBOT_GZ_WORKFLOW_ID: '21802'
-  PREDICTION_JOB_SUBJECT_SET_ID_DEFAULT: '110267'
+  ZOOBOT_GZ_CONTEXT_ID: '1'
 ---
 apiVersion: apps/v1
 kind: Deployment
